Actualización de estructura de paquetes y archivos para corregir algunos errores con las imagenes y direccionamientos con Springboot.

--- a/src/main/resources/templates/PaginaBienvenidaBootstrap.html
+++ b/src/main/resources/templates/PaginaBienvenidaBootstrap.html
@@ -174,7 +174,7 @@
                 </button>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="PaginaGraficoBootstrap.html">HeatMap</a>
+                <a class="nav-link" href="/PaginaGraficoBootstrap">HeatMap</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#abajo">¿Quiénes somos?</a>
