--- a/src/main/resources/templates/PaginaGraficoBootstrap.html
+++ b/src/main/resources/templates/PaginaGraficoBootstrap.html
@@ -140,7 +140,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li>
-                <a class="navbar-brand" href="PaginaBienvenidaBootstrap.html">VOLVER A PÁGINA PRINCIPAL</a>
+                <a class="navbar-brand" href="/home">VOLVER A PÁGINA PRINCIPAL</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -183,7 +183,7 @@
                 <img src="img/nivelContaminacion.png" class="card-img-top" style="position: absolute;margin-left: 40%;margin-top: 55%" height="496">
             </div>
 
-            <div class="col-8">
+            <div class="col-8" id="grafico">
                 <img src="img/Heatmap.png" class="card-img-top" style="position: absolute;margin-left: 5%;margin-top: 6%;margin-right: 10%" height="450" width="1206">
             </div>
         </div>
