Corección direccionamiento botón "Ir al Heatmap".

--- a/src/main/resources/templates/PaginaBienvenidaBootstrap.html
+++ b/src/main/resources/templates/PaginaBienvenidaBootstrap.html
@@ -138,7 +138,7 @@
                         dentro de la ciudad de Temuco.</p>
                 </div>
                 <div class="button" align="center" style="margin-top: 7%">
-                    <button type="button" onclick="location.href='PaginaGraficoBootstrap.html'" class="btn btn-primary btn-lg btn-light" style="background-color: white;background-color: black">Ir al Heatmap</button>
+                    <button type="button" onclick="location.href='/PaginaGraficoBootstrap'" class="btn btn-primary btn-lg btn-light" style="background-color: white;background-color: black">Ir al Heatmap</button>
                 </div>
             </div>
         </div>
