Testeo gráfico y pequeñas correcciones.

--- a/src/main/resources/templates/PaginaBienvenidaBootstrap.html
+++ b/src/main/resources/templates/PaginaBienvenidaBootstrap.html
@@ -79,7 +79,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="https://i.ibb.co/CPwv2Nx/foto1.jpg" alt="..." style="width:1550px;height: 550px">
+                    <img src="img/foto1.jpg" alt="..." style="width:1550px;height: 550px">
                     <div class="carousel-caption"  style="margin-bottom: 5%">
                         <h3 style="font-size: 50px;color: white">Temática</h3>
                         <p style="font-size: 35px;color: white">Contaminación del aire en Temuco, mediante la
