--- a/src/main/resources/templates/HeatMap.html
+++ b/src/main/resources/templates/HeatMap.html
@@ -86,7 +86,7 @@
     }
     var mousemove = function (d) {
         tooltip
-            .html("El valor exacto es: " + d.mp10)
+            .html("El valor exacto de MP10 es: " + d.mp10 + "<br>Sector: " + d.sector + "<br>Dispositivo: " + d.dispositivo)
             .style("left", (d3.mouse(this)[0] + 70) + "px")
             .style("top", (d3.mouse(this)[1]) + "px")
     }
