--- a/src/main/resources/templates/PaginaBienvenidaBootstrap.html
+++ b/src/main/resources/templates/PaginaBienvenidaBootstrap.html
@@ -46,7 +46,7 @@
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml">
             <li>
                 <a class="navbar-brand" href="#">Página Principal</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -118,15 +118,15 @@
 </section>
 
 <section id="HerramientaGrafica">
-    <div class="container-fluid">
+    <div class="container-fluid" style="width: 100%">
         <img src="https://i.ibb.co/YkR86cr/header.jpg" class="img-fluid" style="position: absolute" height="100%">
-        <div class="row">
+        <div class="row" style="width: 100%">
             <div class="col-md-8">
                 <div class="imagenGrafico">
-                    <img src="https://i.ibb.co/d5PJGcn/Heatmap.png" class="img-fluid" style="width: 100%">
+                    <img src="https://i.ibb.co/d5PJGcn/Heatmap.png" class="img-fluid">
                 </div>
             </div>
-            <div class="col-md-4" style="padding: 2%">
+            <div class="col-md-4" style="width: 100%">
                 <div class="texto">
                     <h2>Herramienta gráfica (Mock-up)</h2>
                     <p style="font-size: 20px">Un mapa de calor (heatmap) es una representación gráfica de datos
@@ -145,10 +145,10 @@
     </div>
 </section>
 
-<footer id="footer">
-    <div class="card border-light" style="margin-right: 0%;margin-left: 1%">
-        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%">
-    <div class="container-fluid">
+<footer id="footer" style="width: 100%">
+    <div class="card border-light" style="margin-right: 0%;margin-left: 0%;width: 100%">
+        <img src="https://i.ibb.co/YkR86cr/header.jpg" class="card-img-top" style="position: absolute" height="100%" >
+    <div class="container-fluid" style="width: 100%">
         <div class="col-md-9" style="padding: 3%;margin-left: 10%;" align="center">
             <ul style="list-style: none;font-size: 20px">
                 <a name="abajo"></a>
