--- a/src/main/resources/templates/PaginaGraficoBootstrap.html
+++ b/src/main/resources/templates/PaginaGraficoBootstrap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -11,6 +11,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/PaginaGraficoBootstrap.css">
 
+    <!-- Load d3.js -->
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <!-- Load color palettes -->
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script th:inline="javascript">
+        var data = [[${ datosRegistros }]];
+    </script>
 </head>
 <body>
 <header>
@@ -50,9 +57,10 @@
 
 <div class="card border-0" style="height: 750px">
     <img src="img/fondo.png" class="card-img-top" style="position: absolute" height="auto">
-    <div class="container">
-        <div class="row">
-            <div class="col-8">
+    <div class="container-fluid border">
+        <div class="row" style="margin-top: 2%">
+            <div class="col-md-8">
+                <div style="margin-left: 25%">
                 <form action="PaginaGraficoBootstrap.html">
                 <select class="select-css"  name="Sector" style="width:170px;margin-top: 4%;margin-bottom: 4%">
                     <option value="" selected disabled hidden>Seleccione sector</option>
@@ -71,18 +79,22 @@
                     Fecha de inicio : &nbsp; &nbsp; <input type="tex" name="fechaInicio" th:value="${fechaInicio}" maxlength="15" size="7" style="margin-left: 5px"> formato = dd/mm/aa o dd-mm-aa
                     <br>
                     Fecha de término : <input type="tex" name="fechaTermino" th:value="${fechaTermino}" maxlength="15" size="7"> formato = dd/mm/aa o dd-mm-aa
-                    <button style="width: 100px;height: 50px;margin-top: 3%;margin-left: 25%">
-                        <input type="submit" value="Buscar">
-                    </button>
-
                 </form>
+                </div>
             </div>
-            <div class="col-4">
-                <img src="img/nivelContaminacion.png" class="card-img-top" style="position: absolute;margin-left: 40%;margin-top: 55%" height="496">
+            <div class="col-md-4">
+                <div class="button" style="margin-bottom: 15%;margin-top: 15%">
+                    <a class="btn btn-primary btn-lg btn-blue" style="position: relative;background-color: #112953" href="#Grafico"
+                       onclick=generarGrafico(data)>Generar Gráfico</a>
+                </div>
             </div>
-
-            <div class="col-8" id="grafico">
-                <img src="img/Heatmap.png" class="card-img-top" style="position: absolute;margin-left: 5%;margin-top: 6%;margin-right: 10%" height="450" width="1206">
+        </div>
+        <div class="row" style="margin-top: 5%">
+            <div class="col-md-8">
+                <div id="my_dataviz"></div>
+            </div>
+            <div class="col-md-4">
+                <img src="img/valoresDeContaminacion.png" class="card-img-top" style="position: static" width="20px" height="450px">
             </div>
         </div>
     </div>
@@ -97,5 +109,130 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+<script>
+    function generarGrafico(data) {
+
+    // set the dimensions and margins of the graph
+    var margin = { top: 80, right: 25, bottom: 30, left: 40 },
+        width = 450 - margin.left - margin.right,
+        height = 450 - margin.top - margin.bottom;
+
+    // append the svg object to the body of the page
+    var svg = d3.select("#my_dataviz")
+        .append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+        .attr("transform",
+            "translate(" + margin.left + "," + margin.top + ")");
+
+    //Read the data
+
+
+    // Labels of row and columns -> unique identifier of the column called 'group' and 'variable'
+    var myGroups = d3.map(data, function (d) { return d.fecha; }).keys()
+    var myVars = d3.map(data, function (d) { return d.hora; }).keys()
+
+    // Build X scales and axis:
+    var x = d3.scaleBand()
+        .range([0, width])
+        .domain(myGroups)
+        .padding(0.05);
+    svg.append("g")
+        .style("font-size", 15)
+        .attr("transform", "translate(0," + height + ")")
+        .call(d3.axisBottom(x).tickSize(0))
+        .select(".domain").remove()
+
+    // Build Y scales and axis:
+    var y = d3.scaleBand()
+        .range([height, 0])
+        .domain(myVars)
+        .padding(0.05);
+    svg.append("g")
+        .style("font-size", 15)
+        .call(d3.axisLeft(y).tickSize(0))
+        .select(".domain").remove()
+
+    // Build color scale
+    var myColor = d3.scaleLinear()
+        .domain([0,50,100,150,200])
+        .range(['green', 'yellow', 'orange', 'red', 'purple']);
+
+    // create a tooltip
+    var tooltip = d3.select("#my_dataviz")
+        .append("div")
+        .style("opacity", 0)
+        .attr("class", "tooltip")
+        .style("background-color", "white")
+        .style("border", "solid")
+        .style("border-width", "2px")
+        .style("border-radius", "5px")
+        .style("padding", "5px")
+
+    // Three function that change the tooltip when user hover / move / leave a cell
+    var mouseover = function (d) {
+        tooltip
+            .style("opacity", 1)
+        d3.select(this)
+            .style("stroke", "black")
+            .style("opacity", 1)
+    }
+    var mousemove = function (d) {
+        tooltip
+            .html("El valor exacto de MP10 es: " + d.mp10 + "<br>Sector: " + d.sector)
+            .style("left", (d3.mouse(this)[0] + 70) + "px")
+            .style("top", (d3.mouse(this)[1]) + "px")
+    }
+    var mouseleave = function (d) {
+        tooltip
+            .style("opacity", 0)
+        d3.select(this)
+            .style("stroke", "none")
+            .style("opacity", 0.8)
+    }
+
+    // add the squares
+    svg.selectAll()
+        .data(data, function (d) { return d.fecha + ':' + d.hora; })
+        .enter()
+        .append("rect")
+        .attr("x", function (d) { return x(d.fecha) })
+        .attr("y", function (d) { return y(d.hora) })
+        .attr("rx", 4)
+        .attr("ry", 4)
+        .attr("width", x.bandwidth())
+        .attr("height", y.bandwidth())
+        .style("fill", function (d) { return myColor(d.mp10) })
+        .style("stroke-width", 4)
+        .style("stroke", "none")
+        .style("opacity", 0.8)
+        .on("mouseover", mouseover)
+        .on("mousemove", mousemove)
+        .on("mouseleave", mouseleave)
+
+
+    // Add title to graph
+    svg.append("text")
+        .attr("x", 0)
+        .attr("y", -50)
+        .attr("text-anchor", "left")
+        .style("font-size", "22px")
+        .text("A d3.js heatmap");
+
+    // Add subtitle to graph
+    svg.append("text")
+        .attr("x", 0)
+        .attr("y", -20)
+        .attr("text-anchor", "left")
+        .style("font-size", "14px")
+        .style("fill", "grey")
+        .style("max-width", 400)
+        .text("A short description of the take-away message of this chart.");
+
+    }
+</script>
+
 </body>
 </html>
