--- a/src/main/resources/templates/PaginaGraficoBootstrap.html
+++ b/src/main/resources/templates/PaginaGraficoBootstrap.html
@@ -67,16 +67,16 @@
                 <form action="PaginaGraficoBootstrap.html">
                 <select class="select-css"  name="Sector" style="width:170px;margin-top: 20%;margin-bottom: 4%">
                     <option value="" selected disabled hidden>Seleccione sector</option>
-                    <option>Todos los sectores</option>
-                    <option>Amanecer</option>
-                    <option>Centro</option>
-                    <option>Pedro de Valdivia</option>
-                    <option>Universidad</option>
-                    <option>Sta. Rosa</option>
-                    <option>Poniente</option>
-                    <option>Labranza</option>
-                    <option>Fundo el carmen</option>
-                    <option>Pueblo Nuevo</option>
+                    <option value="Todos los sectores">Todos los sectores</option>
+                    <option value="Amanecer">Amanecer</option>
+                    <option value="Centro">Centro</option>
+                    <option value="Pedro de Valdivia">Pedro de Valdivia</option>
+                    <option value="Universidad">Universidad</option>
+                    <option value="Sta. Rosa">Sta. Rosa</option>
+                    <option value="Poniente">Poniente</option>
+                    <option value="Labranza">Labranza</option>
+                    <option value="Fundo el carmen">Fundo el carmen</option>
+                    <option value="Pueblo Nuevo">Pueblo Nuevo</option>
                 </select>
                     <h6>Seleccione la fecha de inicio:</h6>
                     <input type="text" id="fechaInicio" width="276">
@@ -93,7 +93,7 @@
                 <img src="img/valoresDeContaminacion.png" class="card-img-top" style="position: static; width:300px; height:300px; margin-top: 15%; margin-left: 20%">
             </div>
         </div>
-        <div class="row" style="margin-top:2%; margin-left:5%">
+        <div class="row" style="margin-top:2%">
             <div class="col-md-12">
                 <div id="my_dataviz"></div>
             </div>
@@ -113,7 +113,7 @@
 
 <script>
     function hacerPeticion() {
-      document.getElementById("my_dataviz").innerHTML = '';
+      document.getElementById("my_dataviz").innerHTML = '';  //actualizar gráfico sin que se sobreescriba
       var fecha = document.getElementById("fechaInicio").value;
       var xhttp = new XMLHttpRequest();
       xhttp.open("GET", "/obtenerFechaInicio?fechaInicio=" + fecha , true);
@@ -144,12 +144,10 @@
         .attr("transform",
             "translate(" + margin.left + "," + margin.top + ")");
 
-    //Read the data
-
 
     // Labels of row and columns -> unique identifier of the column called 'group' and 'variable'
     var myGroups = d3.map(data, function (d) { return d.hora; }).keys()
-    var myVars = d3.map(data, function (d) { return d.fecha; }).keys()
+    var myVars = d3.map(data, function (d) { return d.parsedDate; }).keys()
 
     // Build X scales and axis:
     var x = d3.scaleBand()
@@ -169,7 +167,7 @@
         .domain(myVars)
         .padding(0.05);
     svg.append("g")
-        .style("font-size", 10)
+        .style("font-size", 15)
         .attr("stroke","white")
         .call(d3.axisLeft(y).tickSize(0))
         .select(".domain").remove()
@@ -214,11 +212,11 @@
 
     // add the squares
     svg.selectAll()
-        .data(data, function (d) { return d.hora + ':' + d.fecha; })
+        .data(data, function (d) { return d.hora + ':' + d.parsedDate; })
         .enter()
         .append("rect")
         .attr("x", function (d) { return x(d.hora) })
-        .attr("y", function (d) { return y(d.fecha) })
+        .attr("y", function (d) { return y(d.parsedDate) })
         .attr("rx", 4)
         .attr("ry", 4)
         .attr("width", x.bandwidth())
@@ -248,7 +246,7 @@
         .style("font-size", "14px")
         .style("fill", "grey")
         .style("max-width", 400)
-        .text("A short description of the take-away message of this chart.");
+        .text("Gráfico semanal con franjas horarias (0 a 23 horas)");
 
     }
 </script>
