--- a/src/main/resources/templates/PaginaGraficoBootstrap.html
+++ b/src/main/resources/templates/PaginaGraficoBootstrap.html
@@ -50,7 +50,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li>
-                <a class="navbar-brand" href="/home">VOLVER A PÁGINA PRINCIPAL</a>
+                <a class="navbar-brand" href="/">VOLVER A PÁGINA PRINCIPAL</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -179,8 +179,8 @@
 
     // Build color scale
     var myColor = d3.scaleLinear()
-        .domain([0,50,100,150,200])
-        .range(['green', 'yellow', 'orange', 'red', 'purple']);
+        .domain([0,50,100,150,200,1000])
+        .range(['green', 'yellow', 'orange', 'red', 'purple', 'purple']);
 
     // create a tooltip
     var tooltip = d3.select("#my_dataviz")
