--- a/src/main/resources/templates/PaginaGraficoBootstrap.html
+++ b/src/main/resources/templates/PaginaGraficoBootstrap.html
@@ -14,6 +14,8 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="CSS/PaginaGraficoBootstrap.css">
 
     <!-- Load d3.js -->
@@ -82,7 +84,7 @@
                 </select>
                     <h6>Seleccione la fecha de inicio:</h6>
                     <h6>Formato: dd/mm/yyyy</h6>
-                    <input type="text" id="fechaInicio" width="276">
+                    <input id="datepicker" width="270" >
                 </form>
                 </div>
             </div>
@@ -104,6 +106,7 @@
     </div>
 </div>
 
+<!--
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -113,11 +116,20 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        -->
+
+
+<script>
+        $('#datepicker').datepicker({
+            uiLibrary: 'bootstrap4',
+            format: 'dd/mm/yyyy'
+        });
+    </script>
 
 <script>
     function hacerPeticion() {
       document.getElementById("my_dataviz").innerHTML = '';
-      var fecha = document.getElementById("fechaInicio").value;
+      var fecha = document.getElementById("datepicker").value;
       var xhttp = new XMLHttpRequest();
       xhttp.open("GET", "/obtenerFechaInicio?fechaInicio=" + fecha , true);
       xhttp.send();
@@ -134,7 +146,7 @@
     function generarGrafico(data) {
 
     // set the dimensions and margins of the graph
-    var margin = { top: 80, right: 25, bottom: 30, left: 80 },
+    var margin = { top: 80, right: 25, bottom: 30, left: 200 },
         width = 1500 - margin.left - margin.right,
         height = 400 - margin.top - margin.bottom;
 
